# readingbricks

./: .coveragerc  .gitignore  .travis.yml  LICENSE  Makefile  README.md  counts_of_tags.tsv  list_of_tags.txt  pyproject.toml  requirements.txt  run_app_locally.py  run_flask_app.py  search.py  setup.py  tox.ini  uwsgi.ini
.github/workflows/: main.yml
git_hooks/: pre_commit_hook.py
hooks/: post_commit_hook.py  pre_commit_hook.py
notes/: all_notes_without_sorting.ipynb
notes/machine_learning/: bayesian_methods.ipynb  evaluation.ipynb  miscellaneous.ipynb  neural_networks.ipynb  recommender_systems.ipynb  reinforcement_learning.ipynb  statistics_and_ab_experiments.ipynb  theory_of_machine_learning.ipynb
offline_tools/: search.py
readingbricks/: __init__.py  __main__.py  app_for_server.py  app_runner.py  constants.py  db_control.py  default_settings.py  ipynb_utils.py  markdown_notes_control.py  path_configuration.py  paths.py  query_processing.py  resources.py  settings.py  user_query_processing.py  utils.py  views.py
readingbricks/markdown_notes/: Байесовский статистический вывод.md  Внутреннее устройство LSTM-нейрона.md  Дивергенция Кульбака-Лейблера.md  Искусственная целевая переменная.md  Как подобрать сложность модели без кросс-валидации?.md  Общий взгляд на EM-алгоритм.md  (+4 more)
requirements/: base.txt  constraints.txt  production.txt  test.txt
snippets/: all_snippets_without_sorting.ipynb
supplementaries/: counts_of_tags.tsv  search_in_ipynb_notes.py
tests/: __init__.py  conftest.py  test_pre_launch_utils.py  test_utils.py  test_views.py
(+54 files in other folders)
