[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "readingbricks"
version = "0.2.1"
description = "Flask app for reading and searching notes from a personal knowledge base"
readme = "README.md"
keywords = ["knowledge_base", "lecture_notes", "search_engine", "tf_idf", "zettelkasten"]
urls = {Homepage = "https://github.com/Nikolay-Lysenko/readingbricks"}
authors = [{name = "Nikolay Lysenko", email = "nikolay-lysenco@yandex.ru"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3"
]
requires-python = ">= 3.9"
dependencies = [
    "Flask",
    "Flask-Markdown",
    "Flask-Misaka",
    "nltk",
    "pyparsing",
    "python-markdown-math"
]

[tool.setuptools]
packages = ["readingbricks"]

[tool.setuptools.package-data]
"readingbricks.static.css" = ["*.css"]
"readingbricks.static.images.favicons" = ["*.ico", "*.png"]
"readingbricks.templates" = ["*.html"]
